--- a/.github/workflows/gitbook.yml
+++ b/.github/workflows/gitbook.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '12.18.0'
+
       - name: Install GitBook CLI
         run: npm install -g gitbook-cli
 
@@ -25,5 +30,6 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
+          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           folder: _book
